--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Poppins:wght@400;600&family=Titan+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 *{
     margin: 0;
@@ -24,8 +24,8 @@ nav{
     display: flex;
 }
 
-.logo-menu .logo h1{
-    font-family: Clash Display;
+.logo-menu .logo a{
+    text-decoration: none;
     font-size: 36px;
     font-weight: 700;
     line-height: 44.28px;
@@ -34,7 +34,6 @@ nav{
 }
 
 .logo-menu .logo span{
-    font-family: Clash Display;
     font-size: 36px;
     font-weight: 700;
     line-height: 44.28px;
@@ -64,7 +63,6 @@ nav{
 .ul-btn ul{
     display: flex;
     gap: 56px;
-    color: #fff;
     font-size: 16px;
     font-weight: 400;  
 }
@@ -73,14 +71,124 @@ nav{
     list-style: none;
 }
 
-.ul-btn .register button{
-    border: none;
+.ul-btn ul li a{
+    text-decoration: none;
+    color: #fff;
+    
+}
+
+.ul-btn .register a{
+    text-decoration: none;
     background: linear-gradient(270deg, #903AFF 0%, #D434FE 56.42%, #FF26B9 99.99%, #FE34B9 100%);
     color: #fff;
     padding: 16px 52px;
     font-size: 16px;
     font-weight: 400;  
 }
+
+
+/* contact page start*/
+.get-form{
+    padding: 140px 208px 115px;
+   display: flex;
+   gap: 225px;
+}
+
+.get-form .get h1{
+    font-family: Clash Display;
+    font-size: 32px;
+    font-weight: 600;    
+    color: #D434FE;
+    margin-top: 56px;
+}
+
+.get-form .get h2{
+    font-size: 16px;
+    font-weight: 400;  
+    color: #fff;  
+    margin: 22px 0;
+}
+
+.get-form .get p{
+    margin-bottom: 22px;
+}
+
+.get-form .get p a{
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: 400;  
+    color: #fff;
+}
+
+.social-links h3{
+    color: #D434FE;
+    font-size: 16px;
+    font-weight: 400;    
+    margin: 30px 0 10px;
+}
+
+.links{
+    display: flex;
+    gap: 19px;
+}
+
+.links a{
+    color: #fff;
+}
+
+#form{
+    padding: 75px 90px;
+    background-color: #2e2e2e10;
+    box-shadow: 0px 4px 4px 0px #00000040;
+}
+
+#form h1{
+    font-family: Clash Display;
+    font-size: 20px;
+    font-weight: 600;
+    color: #D434FE; 
+}
+
+#form .form-details input{
+    width: 100%;
+    padding: 13px 29px;
+    margin-top: 42px;
+    background: transparent;
+    outline: none;
+    color: #fff;
+    border: 1px solid #FFFFFF;
+}
+
+#form .form-details textarea{
+    background: transparent;
+    width: 100%;
+    height: 119px;
+    padding: 13px 29px;
+    margin: 39px 0 31px;
+    outline: none;
+    color: #fff;
+    border: 1px solid #FFFFFF;
+}
+
+.form-submith{
+    display: flex;
+    justify-content: center;
+}
+
+.form-submith button{
+    background: linear-gradient(270deg, #903AFF 0%, #D434FE 56.42%, #FF26B9 99.99%, #FE34B9 100%);
+    border: none;
+    padding: 17px 57px;
+    color: #fff;
+    font-size: 16px;
+    font-weight: 400;    
+}
+
+.form-links{
+    display: none;
+}
+
+/* contact page end*/
 
 
 /* ========== RESPONSIVENES START ========== */
@@ -110,6 +218,7 @@ nav{
         position: absolute;
         background: #150E28;
         width: 100%;
+        height: 100vh;
         top: 10px;
         left: 0;
         padding: 0 47px;
@@ -125,15 +234,19 @@ nav{
         flex-direction: column;
         position: relative;
         padding-top: 119px;
-        margin-bottom: 29px;
+        margin-bottom: 70px;
     }
 
     
     .close{
+        background: transparent;
+        color: #fff;
+        font-size: 16px;
+        font-weight: 600;
         border: 1px solid linear-gradient(180deg, #903AFF 0%, #FF26B9 100%); 
         border-radius: 50px;     
-        width: 50px;
-        height: 48px;
+        width: 30px;
+        height: 28px;
         margin: 47px 0;
         position: absolute;
         top: -20px;
