--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -205,6 +205,7 @@ nav{
 }
 
 .tex-h1{
+    width: 600px;
     padding-top: 10px;
 }
 
@@ -218,8 +219,8 @@ margin-left: 28rem;
 }
 
 .tex-h1 img{
-    width: 86px;
-    height: 86px;
+    width: 76px;
+    height: 76px;
     z-index: 10;
 }
 
@@ -251,16 +252,16 @@ margin-left: 28rem;
 }
 
 .hero-img{
-    width: 828px;
-    height: 715px;
+    width: 728px;
+    height: 615px;
     filter: grayscale(100%);
 } 
 
 .hero-img img{
-    width: 828px;
-    height: 715px;
+    width: 728px;
+    height: 615px;
     position: absolute;
-    left: -280px;
+    left: -110px;
     z-index: 1;
 } 
 
@@ -308,6 +309,40 @@ margin-left: 28rem;
     width: 500px;
 }
 
+.Judging img {
+    width: 510px;
+    height: 587px;
+    object-fit: cover;
+    margin-top: 15rem;
+    position: relative;
+    z-index: 10;
+}
+
+
+.bk-img {
+    width: 134px;
+    height: 134px;
+    background: linear-gradient(270deg, #8F01FE 0%, #FF2674 97.24%);
+    border-radius: 50%;
+    position: relative;
+    bottom: 40rem;
+    z-index: 1; 
+}
+
+.idea p span{
+    color: #FF26B9;
+}
+
+.read-more button{
+    background: linear-gradient(270deg, #903AFF 0%, #D434FE 56.42%, #FF26B9 99.99%, #FE34B9 100%);
+    border: none;
+    padding: 17px 57px;
+    color: #fff;
+    font-size: 16px;
+    font-weight: 400;
+    margin-top: 55px; 
+} 
+
 /* the-big-idea end */
 
 
@@ -315,7 +350,7 @@ margin-left: 28rem;
 .get-form{
     padding: 140px 208px 115px;
    display: flex;
-   gap: 225px;
+   gap: 125px;
 }
 
 .get-form .get h1{
@@ -334,6 +369,7 @@ margin-left: 28rem;
 }
 
 .get-form .get p{
+    width: 300px;
     margin-bottom: 22px;
 }
 
@@ -361,13 +397,14 @@ margin-left: 28rem;
 }
 
 #form{
+    width: 500px;
     padding: 75px 90px;
     background-color: #2e2e2e10;
     box-shadow: 0px 4px 4px 0px #00000040;
 }
 
 #form h1{
-    font-family: Clash Display;
+    /* font-family: Clash Display; */
     font-size: 20px;
     font-weight: 600;
     color: #D434FE; 
@@ -417,6 +454,108 @@ margin-left: 28rem;
 }
 
 /* contact page end*/
+
+
+
+/* foooter start */
+footer{
+    padding: 40px 0;
+    background: #100B20;
+}
+
+.footer-contanier{
+    display: flex;
+    gap: 213px;
+    padding: 30px 128px;
+}
+
+.logo-p a{
+    text-decoration: none;
+    font-size: 30px;
+    font-weight: 700;
+    line-height: 36.9px;
+    color: #fff;    
+}
+
+.logo-p span{
+    color: #D434FE;    
+}
+
+.logo-p p{
+    width: 320px;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20.69px;    
+    color: #fff;
+    margin: 10px 0 50px;
+}
+
+.logo-p h6{
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 20.69px;
+    color: #fff;
+}
+
+.Useful-contacts{
+    display: flex;
+    gap: 113px;
+}
+
+.Useful-contacts h1{
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 24.14px;
+    margin-bottom: 10px;
+    color: #D434FE;
+}
+
+.Useful ul li{
+    list-style: none;
+    margin-bottom: 23px;
+}
+
+.Useful ul li a{
+    text-decoration: none;
+    color: #fff;
+}
+
+.user-socal{
+    display: flex;
+    gap: 20px;
+}
+
+.user-socal h1{
+    width: 80px;
+    font-size: 15px; 
+}
+
+.contacts{
+    display: flex;
+    flex-direction: column;
+    gap: 26px;
+}
+
+.contacts p{
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 18.95px;
+    color: #fff;
+}
+
+.contacts p a{
+    text-decoration: none;
+    color: #fff;
+}
+
+.ft-p{
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 14.63px;   
+    color: #fff;
+    text-align: center; 
+}
+/* foooter start */
 
 
 /* ========== RESPONSIVENES START ========== */
@@ -562,6 +701,12 @@ margin-left: 28rem;
     margin-top: 16px;
 }
 
+.bk-img {
+    width: 60px;
+    height: 60px;
+    bottom: 17rem;
+}
+
 /* the-big-idea end */
 
 
@@ -579,6 +724,22 @@ margin-left: 28rem;
     padding: 58px;
 }
 /* contact page end */
+
+/* footer start */
+.footer-contanier{
+    gap: 50px;
+    padding: 30px 48px;
+}
+
+.logo-p p{
+    width: 210px;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20.69px;    
+    color: #fff;
+    margin-bottom:15px;
+}
+/* footer end */
 
 }
 
@@ -718,7 +879,7 @@ margin-left: 28rem;
     }
     
     .hero-img img{
-            width: 370px;
+            width: 363px;
             height: 374px;
             margin-top: 0;
             left: -10px;
@@ -774,6 +935,15 @@ margin-left: 28rem;
     margin-top: 16px;
 }
 
+.read-more{
+    display: flex;
+    justify-content: center;
+}
+
+.bk-img {
+    display: none;
+}
+
 /* the-big-idea end */
 
 /* contact page start */
@@ -795,6 +965,25 @@ margin-left: 28rem;
 }
 /* contact page end */
 
+.footer-contanier{
+    flex-direction: column;
+    gap: 40px;
+}
+
+.logo-p p{
+    width: 100%;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20.69px;    
+    color: #fff;
+    margin-bottom:15px;
+}
+
+.Useful-contacts{
+    flex-direction: column;
+    gap: 32px;
+}
+/* footer end */
 
     
 }
