--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,6 +34,48 @@
     right: 0;
 }
 
+.star-1{
+    color: #ff00ff;
+    position: relative;
+    top: 12rem;
+}
+
+.star-2{
+    color: #8F01FE;
+    position: relative;
+    top: 4rem;
+    left: 31rem;
+}
+
+.Rules-img .star-1{
+    color: #858386;
+    top: -0rem;
+    left: 20rem;
+}
+
+.Rules-img .star-2{
+    color: #fff;
+    top: 1rem;
+}
+
+.Judging .star-1{
+    color: #903AFF;
+    top: 9rem;
+    left: 5rem;
+}
+
+.Judging .star-2{
+    color: #fff;
+    top: -8rem;
+}
+
+.Judging .star-3{
+    color: #858386;
+    position: relative;
+    top: -27rem;
+    left: 20rem;
+}
+
 
 .shining-star {
     font-size: 10px;
@@ -65,6 +107,49 @@
 
 .col i{
     color: #D434FE;
+}
+
+.popping {
+    display: inline-block;
+    animation: pop 0.6s ease-in-out infinite;
+  }
+  
+  @keyframes pop {
+    0% {
+      transform: scale(1);
+    }
+    50% {
+      transform: scale(1.2);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+  
+
+
+.questions{
+display: flex;
+gap: 90px;
+position: absolute;
+top: 3rem;
+left: 38rem;
+}
+
+.the-big .questions img{
+    width: 110px;
+    height: 180px;    
+    object-fit: cover;
+}
+
+.questions-2{
+    position: relative;
+    top: 10px;
+}
+
+.questions-1{
+    position: relative;
+    top: 7rem;
 }
 
 
@@ -347,10 +432,20 @@ margin-left: 28rem;
     margin-top: 55px; 
 } 
 
+
+.Frequently{
+    position: relative;
+    padding-top: 10rem;
+}
+
 .Frequently img{
     width: 641px;
     height: 681px;
     object-fit: cover;
+}
+
+.freq-img{
+    margin-top: 9rem;
 }
 
 .Frequently p{
@@ -738,6 +833,53 @@ footer{
 
 /* ========== RESPONSIVENES START ========== */
 @media (max-width: 930px) {
+/* icons start */
+.star-1{
+    top: 7rem;
+    left: 0;
+}
+
+.star-2{
+    left: 20rem;
+}
+
+.Rules-img .star-1{
+    left: 13rem;
+}
+
+.Judging .star-2{
+    top: 10rem;
+    left: 16rem;
+}
+
+.Judging .star-3{
+    top: -12rem;
+    left: 8rem;
+}
+
+.questions{
+    gap: 6rem;
+    top: 14rem;
+    left: 30rem;
+}
+    
+.the-big .questions img{
+    width: 32px;
+    height: 50px;    
+    object-fit: cover;
+}
+    
+.questions-2{
+    top: 6rem;
+    left: -4rem;
+}
+    
+.questions-1:last-child{
+    left: -8rem;
+}
+
+/* icons end */
+
     nav{
         position: relative;
         padding: 34px 48px 15px;
@@ -946,6 +1088,69 @@ footer{
 
 
 @media (max-width: 475px) {
+/* === icons start === */
+.star i{
+    top: 6rem;
+    left: 5rem;
+}
+
+.creative img{
+    bottom: -30px;
+}
+
+.creative i{
+    top: -10px;
+    right: -20px;
+}
+
+.questions{
+    width: 100%;
+    gap: 0px;
+    top: 48rem;
+    left: 0rem;
+}
+    
+.the-big .questions img{
+    width: 30px;
+    height: 51px;    
+    object-fit: cover;
+}
+    
+.questions-2{
+    top: 6rem;
+    left: -4rem;
+}
+    
+.questions-1:last-child{
+    left: -8rem;
+}
+
+.star-1{
+    left: 3rem;
+}
+
+.Rules-img .star-1{
+    top: -13rem;
+    left: 2rem;
+}
+
+.Judging .star-1{
+    top: -1rem;
+}
+
+.Judging .star-2{
+    top: 73rem;
+    left: 19rem;
+}
+
+.Judging .star-3{
+    top: -8rem;
+    left: 10rem;
+}
+    
+/* === icons end === */
+
+
     .ul-btn ul{
         font-family: Inter;
         font-size: 18px;
@@ -962,22 +1167,6 @@ footer{
     }
 
         /* hero section start */
-/* === icons start === */
-.star i{
-    top: 6rem;
-    left: 5rem;
-}
-
-.creative img{
-    bottom: -30px;
-}
-
-.creative i{
-    top: -10px;
-    right: -20px;
-}
-/* === icons end === */
-
         .writting{
             padding:0 48px;
             justify-content: center;
@@ -1141,7 +1330,7 @@ footer{
 }
 
 .Frequently .idea{
-    margin-bottom: 40px;
+    margin-bottom: 8rem;
 }
 
 .Frequently p{
