--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -155,16 +155,57 @@ left: 38rem;
 
 /* ==== ICONS END */
 
+
+/* ==== BACKGROUNDS START==== */
+.nav-hero{
+    background:
+    radial-gradient(circle, hsl(271, 92%, 28%) 0%, rgba(255,255,255,0) 60%) top -3rem left 4rem;
+    background-size: 700px 800px;
+    background-repeat: no-repeat; 
+}
+
+.hero {
+    background:
+    radial-gradient(circle, hsl(271, 92%, 28%) 0%, rgba(247, 12, 235, 0) 60%) center right -3rem;
+    background-size: 570px 800px;
+    background-repeat: no-repeat; 
+}
+/* ==== BACKGROUNDS END==== */
+/* TYPEWRITTER START */
+.typewriter {
+    color: #fff;
+    overflow: hidden;
+    border-right: 1px solid ;
+    white-space: nowrap;
+    width: 0;
+    animation: typing 14s steps(30, end), blink 0.75s step-end infinite;
+}
+
+/* Typing effect */
+@keyframes typing {
+    from { width: 0; }
+    to { width: 100%; }
+}
+
+/* Blinking cursor effect */
+@keyframes blink {
+    50% { border-color: transparent; }
+}
+
 .register a:hover,
 .read-more button:hover,
 .form-submith button:hover{
     background: transparent;
-    border: 1px solid #FE34B9;
+    border: 1px solid;
+    border-image: linear-gradient(90deg, #903AFF, #D434FE, #FF26B9) 1;
+    border-radius: 8px;
 }
-
+/* TYPEWRITTER END */
 
 body{
     background: #150E28;
+    max-width: 1600px;
+    margin: 0 auto;
 }
 
 nav{
@@ -229,7 +270,21 @@ nav{
 .ul-btn ul li a{
     text-decoration: none;
     color: #fff;
-    
+    font-weight: 600;
+}
+
+.ul-btn ul li a:hover{
+    background: linear-gradient(90deg, #903AFF, #D434FE, #FF26B9);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+}
+
+.active{
+    background: linear-gradient(90deg, #903AFF, #D434FE, #FF26B9);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
 }
 
  .register a{
@@ -249,13 +304,14 @@ nav{
 .writting{
     padding-right: 55px;
     display: flex;
-    justify-content: end;
+    padding-left: 38rem;
     color: #fff;
     font-size: 36px;
     font-style: italic;
     font-weight: 700;
     line-height: 43.88px;
     margin: 32px 0 0;
+    text-align: right;
 }
 
 .curved-text{
@@ -889,6 +945,12 @@ footer{
 
 /* icons end */
 
+/* === BACKGROUND START */
+.hero{
+    background-position: bottom right;
+}
+/* === BACKGROUND END */
+
     nav{
         position: relative;
         padding: 34px 48px 15px;
@@ -1159,6 +1221,16 @@ footer{
     
 /* === icons end === */
 
+/* === background start */
+.nav-hero{
+    background-position: left -15rem top -6rem;
+}
+
+.hero{
+    background: transparent;
+}
+/* === background end */
+
 
     .ul-btn ul{
         font-family: Inter;
@@ -1178,7 +1250,6 @@ footer{
         /* hero section start */
         .writting{
             padding:0 48px;
-            justify-content: center;
             font-size: 16px;
             line-height: 19.5px;            
         }
